--- a/pair.html
+++ b/pair.html
@@ -245,7 +245,7 @@
   </div>
 
   <div class="join-buttons">
-    <button onclick="window.open('https://chat.whatsapp.com/HcUtcJWefWLLGC0eHPbUzZ')">Join us today</button>
+    <button onclick="window.open('https://chat.whatsapp.com/GThzurSDIgi8LtBtZotWHn')">OUR CHART ROOM</button>
     <button onclick="window.open('https://whatsapp.com/channel/0029VaeRrcnADTOKzivM0S1r')">SUPPORT CHANNEL</button>
     <button onclick="window.open('https://chat.whatsapp.com/HcUtcJWefWLLGC0eHPbUzZ')">SUPPORT GROUP</button>
   </div>
